charts/ghost/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost
  namespace: blog
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    cert-manager.io/private-key-rotation-policy: "Never"
    cert-manager.io/revision-history-limit: "2147483647"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - blog.lucas.engineering
      secretName: blog-lucas-engineering-tls
  rules:
    - host: blog.lucas.engineering
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ghost
                port:
                  number: 80
